unpolished but working version of call

--- a/web/index.html
+++ b/web/index.html
@@ -54,5 +54,8 @@
       });
     });
   </script>
+
+<script src="https://meet.jit.si/external_api.js" type="application/javascript"></script>
+
 </body>
 </html>
